--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Currency Converter by alexprengere</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/main.js"></script>
     <!--[if lt IE 9]>
@@ -40,13 +40,13 @@
       </nav>
       <section>
         <h1>
-<a name="currency-converter" class="anchor" href="#currency-converter"><span class="octicon octicon-link"></span></a>Currency converter</h1>
+<a id="currency-converter" class="anchor" href="#currency-converter" aria-hidden="true"><span class="octicon octicon-link"></span></a>Currency converter</h1>
 
 <p>This is a currency converter that uses historical rates against a
 reference currency (Euro).</p>
 
 <h2>
-<a name="currency-sources" class="anchor" href="#currency-sources"><span class="octicon octicon-link"></span></a>Currency sources</h2>
+<a id="currency-sources" class="anchor" href="#currency-sources" aria-hidden="true"><span class="octicon octicon-link"></span></a>Currency sources</h2>
 
 <p>The default source is the <a href="http://www.ecb.int/">European Central Bank</a>.
 This is the ECB historical rates for 42 currencies against the Euro
@@ -56,69 +56,66 @@ The converter can use different sources as long as the format is the
 same.</p>
 
 <h2>
-<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<div class="highlight highlight-bash"><pre><span class="nv">$ </span>python setup install --user
-</pre></div>
+<p>You can install directly after cloning:</p>
+
+<div class="highlight highlight-bash"><pre>$ python setup install --user</pre></div>
+
+<p>Or use the Python package:</p>
+
+<div class="highlight highlight-bash"><pre>$ pip install --user currencyconverter</pre></div>
 
 <h2>
-<a name="command-line-example" class="anchor" href="#command-line-example"><span class="octicon octicon-link"></span></a>Command line example</h2>
+<a id="command-line-example" class="anchor" href="#command-line-example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Command line example</h2>
 
-<div class="highlight highlight-bash"><pre><span class="nv">$ </span>python currency_converter.py 100 EUR --to USD
-<span class="s2">"100 EUR"</span> is <span class="s2">"137.59 USD"</span> on 2014-03-28.
-</pre></div>
+<div class="highlight highlight-bash"><pre>$ python currency_converter.py 100 EUR --to USD
+<span class="pl-s"><span class="pl-pds">"</span>100 EUR<span class="pl-pds">"</span></span> is <span class="pl-s"><span class="pl-pds">"</span>137.59 USD<span class="pl-pds">"</span></span> on 2014-03-28.</pre></div>
 
 <p>After installation, you should have <code>currency_converter</code> in your
 <code>$PATH</code>:</p>
 
-<div class="highlight highlight-bash"><pre><span class="nv">$ </span>currency_converter 100 USD -d 2013-12-12
-</pre></div>
+<div class="highlight highlight-bash"><pre>$ currency_converter 100 USD -d 2013-12-12</pre></div>
 
 <h2>
-<a name="python-api-example" class="anchor" href="#python-api-example"><span class="octicon octicon-link"></span></a>Python API example</h2>
+<a id="python-api-example" class="anchor" href="#python-api-example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python API example</h2>
 
 <p>Example:</p>
 
-<div class="highlight highlight-python"><pre><span class="o">&gt;&gt;&gt;</span> <span class="kn">from</span> <span class="nn">currency_converter</span> <span class="kn">import</span> <span class="n">CurrencyConverter</span>
-<span class="o">&gt;&gt;&gt;</span> <span class="n">c</span> <span class="o">=</span> <span class="n">CurrencyConverter</span><span class="p">()</span>
-</pre></div>
+<div class="highlight highlight-python"><pre><span class="pl-k">&gt;&gt;&gt;</span> <span class="pl-k">from</span> currency_converter <span class="pl-k">import</span> CurrencyConverter
+<span class="pl-k">&gt;&gt;&gt;</span> c <span class="pl-k">=</span> CurrencyConverter()</pre></div>
 
 <p>Convert from EUR to USD:</p>
 
-<div class="highlight highlight-python"><pre><span class="o">&gt;&gt;&gt;</span> <span class="n">c</span><span class="o">.</span><span class="n">convert</span><span class="p">(</span><span class="mi">100</span><span class="p">,</span> <span class="s">'EUR'</span><span class="p">,</span> <span class="s">'USD'</span><span class="p">)</span>
-<span class="mf">137.5</span><span class="o">...</span>
-</pre></div>
+<div class="highlight highlight-python"><pre><span class="pl-k">&gt;&gt;&gt;</span> c.convert(<span class="pl-c1">100</span>, <span class="pl-s"><span class="pl-pds">'</span>EUR<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>USD<span class="pl-pds">'</span></span>)
+<span class="pl-c1">137.5</span>...</pre></div>
 
 <p>Default target currency is EUR:</p>
 
-<div class="highlight highlight-python"><pre><span class="o">&gt;&gt;&gt;</span> <span class="n">c</span><span class="o">.</span><span class="n">convert</span><span class="p">(</span><span class="mi">100</span><span class="p">,</span> <span class="s">'EUR'</span><span class="p">)</span>
-<span class="mf">100.0</span>
-<span class="o">&gt;&gt;&gt;</span> <span class="n">c</span><span class="o">.</span><span class="n">convert</span><span class="p">(</span><span class="mi">100</span><span class="p">,</span> <span class="s">'USD'</span><span class="p">)</span>
-<span class="mf">72.67</span><span class="o">...</span>
-</pre></div>
+<div class="highlight highlight-python"><pre><span class="pl-k">&gt;&gt;&gt;</span> c.convert(<span class="pl-c1">100</span>, <span class="pl-s"><span class="pl-pds">'</span>EUR<span class="pl-pds">'</span></span>)
+<span class="pl-c1">100.0</span>
+<span class="pl-k">&gt;&gt;&gt;</span> c.convert(<span class="pl-c1">100</span>, <span class="pl-s"><span class="pl-pds">'</span>USD<span class="pl-pds">'</span></span>)
+<span class="pl-c1">72.67</span>...</pre></div>
 
 <p>Change reference date for rate:</p>
 
-<div class="highlight highlight-python"><pre><span class="o">&gt;&gt;&gt;</span> <span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">datetime</span>
-<span class="o">&gt;&gt;&gt;</span> <span class="n">c</span><span class="o">.</span><span class="n">convert</span><span class="p">(</span><span class="mi">100</span><span class="p">,</span> <span class="s">'EUR'</span><span class="p">,</span> <span class="s">'USD'</span><span class="p">,</span> <span class="n">date</span><span class="o">=</span><span class="n">datetime</span><span class="p">(</span><span class="mi">2013</span><span class="p">,</span> <span class="mo">03</span><span class="p">,</span> <span class="mi">21</span><span class="p">))</span>
-<span class="mf">129.1</span><span class="o">...</span>
-</pre></div>
+<div class="highlight highlight-python"><pre><span class="pl-k">&gt;&gt;&gt;</span> <span class="pl-k">from</span> datetime <span class="pl-k">import</span> datetime
+<span class="pl-k">&gt;&gt;&gt;</span> c.convert(<span class="pl-c1">100</span>, <span class="pl-s"><span class="pl-pds">'</span>EUR<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>USD<span class="pl-pds">'</span></span>, <span class="pl-smi">date</span><span class="pl-k">=</span>datetime(<span class="pl-c1">2013</span>, <span class="pl-c1">03</span>, <span class="pl-c1">21</span>))
+<span class="pl-c1">129.1</span>...</pre></div>
 
 <p>Get a rate:</p>
 
-<div class="highlight highlight-python"><pre><span class="o">&gt;&gt;&gt;</span> <span class="n">c</span><span class="o">.</span><span class="n">get_rate</span><span class="p">(</span><span class="s">'USD'</span><span class="p">)</span>
-<span class="mf">1.375</span><span class="o">...</span>
-</pre></div>
+<div class="highlight highlight-python"><pre><span class="pl-k">&gt;&gt;&gt;</span> c.get_rate(<span class="pl-s"><span class="pl-pds">'</span>USD<span class="pl-pds">'</span></span>)
+<span class="pl-c1">1.375</span>...</pre></div>
 
 <p>Other public members:</p>
 
-<div class="highlight highlight-python"><pre><span class="o">&gt;&gt;&gt;</span> <span class="n">c</span><span class="o">.</span><span class="n">last_date</span>
-<span class="n">datetime</span><span class="o">.</span><span class="n">datetime</span><span class="p">(</span><span class="mi">2014</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="mi">28</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span>
-<span class="o">&gt;&gt;&gt;</span> <span class="nb">min</span><span class="p">(</span><span class="n">c</span><span class="o">.</span><span class="n">dates</span><span class="p">)</span>
-<span class="n">datetime</span><span class="o">.</span><span class="n">datetime</span><span class="p">(</span><span class="mi">1999</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span>
-<span class="o">&gt;&gt;&gt;</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">c</span><span class="o">.</span><span class="n">currencies</span><span class="p">)</span>
-<span class="p">[</span><span class="s">'AUD'</span><span class="p">,</span> <span class="s">'BGN'</span><span class="p">,</span> <span class="s">'BRL'</span><span class="p">,</span> <span class="s">'CAD'</span><span class="p">,</span> <span class="s">'CHF'</span><span class="p">,</span> <span class="s">'CNY'</span><span class="p">,</span> <span class="s">'CYP'</span><span class="p">,</span> <span class="s">'CZK'</span><span class="p">,</span> <span class="s">'DKK'</span><span class="p">,</span> <span class="o">...</span>
-</pre></div>
+<div class="highlight highlight-python"><pre><span class="pl-k">&gt;&gt;&gt;</span> c.last_date
+datetime.datetime(<span class="pl-c1">2014</span>, <span class="pl-c1">3</span>, <span class="pl-c1">28</span>, <span class="pl-c1">0</span>, <span class="pl-c1">0</span>)
+<span class="pl-k">&gt;&gt;&gt;</span> <span class="pl-c1">min</span>(c.dates)
+datetime.datetime(<span class="pl-c1">1999</span>, <span class="pl-c1">1</span>, <span class="pl-c1">4</span>, <span class="pl-c1">0</span>, <span class="pl-c1">0</span>)
+<span class="pl-k">&gt;&gt;&gt;</span> <span class="pl-c1">sorted</span>(c.currencies)
+[<span class="pl-s"><span class="pl-pds">'</span>AUD<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>BGN<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>BRL<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CAD<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CHF<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CNY<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CYP<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CZK<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>DKK<span class="pl-pds">'</span></span>, ...</pre></div>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/alexprengere">alexprengere</a></p>
