Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -7,38 +7,37 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
+    <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
   <body>
-
-      <header>
-        <h1>Currency Converter</h1>
-        <p>A Python currency converter.</p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/alexprengere/currencyconverter" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/alexprengere/currencyconverter/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/alexprengere/currencyconverter/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/alexprengere/currencyconverter">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/alexprengere/currencyconverter/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/alexprengere/currencyconverter/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
     <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
+
       <section>
+        <div id="title">
+          <h1>Currency Converter</h1>
+          <p>A Python currency converter using the European Central Bank data.</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/alexprengere">alexprengere</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
         <h1>
 <a id="currency-converter" class="anchor" href="#currency-converter" aria-hidden="true"><span class="octicon octicon-link"></span></a>Currency converter</h1>
 
@@ -117,10 +116,7 @@ datetime.datetime(<span class="pl-c1">1999</span>, <span class="pl-c1">1</span>,
 <span class="pl-k">&gt;&gt;&gt;</span> <span class="pl-c1">sorted</span>(c.currencies)
 [<span class="pl-s"><span class="pl-pds">'</span>AUD<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>BGN<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>BRL<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CAD<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CHF<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CNY<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CYP<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>CZK<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>DKK<span class="pl-pds">'</span></span>, ...</pre></div>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/alexprengere">alexprengere</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
+
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
