Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@ same.</p>
 
 <p>Convert from EUR to USD:</p>
 
-<pre lang="sourceCode"><code>&gt;&gt;&gt; c.convert(100, 'EUR', 'USD') # doctest: +SKIP
-137.5...
-</code></pre>
+<div class="highlight highlight-source-python"><pre><span class="pl-k">&gt;&gt;&gt;</span> c.convert(<span class="pl-c1">100</span>, <span class="pl-s"><span class="pl-pds">'</span>EUR<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>USD<span class="pl-pds">'</span></span>) <span class="pl-c"># doctest: +SKIP</span>
+<span class="pl-c1">137.5</span>...</pre></div>
 
 <p>Default target currency is EUR:</p>
 
